# fungtion

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  LICENSE  README.md  analysis_outputs.py  environment.yml  feature_extraction.py  html_report.py  main.py  predict.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  pre-commit.yml
assets/web_static/css/: base.css  unirule.css
assets/web_static/js/: alignment.min-v=1447853372.js  phylosvg-min.js  structure.min-v=1438676717.js
assets/web_static/js/phylogram_d3/: utils.js
assets/web_static/xmlfile/: Fungtion_positive.json
data/Fungtion_Independent_Dataset/: Fungtion_Independent_Negative.fasta  Fungtion_Independent_Positive.fasta
data/Fungtion_Independent_Dataset_5_fold/1/: Fungtion_test_balanced.fasta  Fungtion_test_balanced_neg.fasta
data/Fungtion_Independent_Dataset_5_fold/1/.ipynb_checkpoints/: Fungtion_test_balanced_Effector-GAN-checkpoint.csv  Fungtion_test_balanced_EffectorP 1.0-checkpoint.csv  Fungtion_test_balanced_EffectorP 2.0-checkpoint.csv  Fungtion_test_balanced_EffectorP 3.0-checkpoint.csv  Fungtion_test_balanced_EffectorP-fungi 3.0-checkpoint.csv  Fungtion_test_balanced_Effector_GAN_score_neg-checkpoint.csv  Fungtion_test_balanced_aac-checkpoint.csv  Fungtion_test_balanced_aac_binary_svm_score-checkpoint.csv  Fungtion_test_balanced_blast_20_e_0.001-checkpoint.csv  Fungtion_test_balanced_esm2-checkpoint.csv  Fungtion_test_balanced_esm_uniref50-checkpoint.csv  Fungtion_test_balanced_esm_uniref50-checkpoint.fasta  Fungtion_test_balanced_esm_uniref50_binary_svm_score-checkpoint.csv  Fungtion_test_balanced_esm_uniref50_pos-checkpoint.fasta  Fungtion_test_balanced_foldseek_LDDT_0.7-checkpoint.csv
data/Fungtion_Independent_Dataset_5_fold/2/: Fungtion_test_balanced.fasta
data/Fungtion_Independent_Dataset_5_fold/2/.ipynb_checkpoints/: Fungtion_test_balanced_Effector-GAN-checkpoint.csv  Fungtion_test_balanced_Effector_GAN_score_neg-checkpoint.csv  Fungtion_test_balanced_esm_uniref50_binary_svm_score-checkpoint.csv  Fungtion_test_balanced_esm_uniref50_neg-checkpoint.fasta  Fungtion_test_balanced_esm_uniref50_pos-checkpoint.fasta
data/Fungtion_Independent_Dataset_5_fold/3/: Fungtion_test_balanced.fasta
data/Fungtion_Independent_Dataset_5_fold/3/.ipynb_checkpoints/: Fungtion_test_balanced_Effector-GAN-checkpoint.csv  Fungtion_test_balanced_Effector_GAN_score_pos-checkpoint.csv  Fungtion_test_balanced_esm_uniref50_binary_svm_score-checkpoint.csv  Fungtion_test_balanced_esm_uniref50_neg-checkpoint.fasta
data/Fungtion_Independent_Dataset_5_fold/4/: Fungtion_test_balanced.fasta  Fungtion_test_balanced_neg.fasta
data/Fungtion_Independent_Dataset_5_fold/4/.ipynb_checkpoints/: Fungtion_test_balanced_esm_uniref50_binary_svm_score-checkpoint.csv
data/Fungtion_Independent_Dataset_5_fold/5/: Fungtion_test_balanced_neg.fasta
data/Fungtion_Independent_Dataset_5_fold/5/.ipynb_checkpoints/: Fungtion_test_balanced_EffectorP 1.0-checkpoint.csv  Fungtion_test_balanced_EffectorP 2.0-checkpoint.csv  Fungtion_test_balanced_esm2-checkpoint.csv  Fungtion_test_balanced_esm_uniref50-checkpoint.csv  Fungtion_test_balanced_esm_uniref50-checkpoint.fasta  Fungtion_test_balanced_esm_uniref50_binary_svm_score-checkpoint.csv  (+2 more)
data/Fungtion_Training_Dataset/: Fungtion_Training_Negative.fasta  Fungtion_Training_Positive.fasta
data/examples/: example.fasta
model/: FungalEffector_esm_uniref50_svm_3.rds
reference_data/: FungalEffector_positive.fasta
src/fungtion/: __init__.py  _paths.py  analysis_outputs.py  cli.py  feature_extraction.py  html_report.py  output_codes.py  predict.py  predict_core.R  setup_models.py
src/fungtion/model/: FungalEffector_esm_uniref50_svm_1.rds  FungalEffector_esm_uniref50_svm_2.rds  FungalEffector_esm_uniref50_svm_4.rds  FungalEffector_esm_uniref50_svm_5.rds
src/fungtion/reference_data/: FungalEffector_positive_esm_uniref50.csv
tests/: conftest.py  test_cli.py  test_feature_extraction.py  test_output_codes.py  test_predict.py  test_setup_models.py
(+23 files in other folders)
