[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fungtion"
version = "1.0.0"
description = "Predict fungal effector proteins from FASTA files using ESM-1b embeddings and R SVM models."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Jinzheng Ren", email = "renjinzheng2004@gmail.com" }
]
keywords = ["bioinformatics", "fungal effector", "protein prediction", "ESM", "machine learning"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
  "Intended Audience :: Science/Research",
]
dependencies = [
  "torch>=2.11.0",
  "fair-esm>=2.0.0",
  "pandas>=2.3.3",
  "numpy>=2.2.6",
  "biopython>=1.87",
  "scikit-learn>=1.7.2",
]

[project.urls]
Homepage = "https://doi.org/10.1016/j.jmb.2024.168613"
Repository = "https://github.com/noHup-cc/fungtion"

[project.scripts]
fungtion = "main:main"

[tool.setuptools]
py-modules = ["main", "feature_extraction", "predict", "analysis_outputs", "html_report"]
