[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fungtion"
version = "1.0.0"
description = "Predict fungal effector proteins from FASTA files using ESM-1b embeddings and R SVM models."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Jinzheng Ren", email = "renjinzheng2004@gmail.com" }
]
keywords = ["bioinformatics", "fungal effector", "protein prediction", "ESM", "machine learning"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
  "Intended Audience :: Science/Research",
]
dependencies = [
  "torch>=2.11.0",
  "fair-esm>=2.0.0",
  "pandas>=2.3.3",
  "numpy>=2.2.6",
  "biopython>=1.87",
  "scikit-learn>=1.7.2",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.10",
  "pre-commit>=3.7",
  "ruff>=0.6",
]

[project.urls]
Homepage = "https://doi.org/10.1016/j.jmb.2024.168613"
Repository = "https://github.com/noHup-cc/fungtion"

[project.scripts]
fungtion = "fungtion.cli:main"

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.ruff.lint.per-file-ignores]
"src/fungtion/html_report.py" = ["E501"]
"src/fungtion/analysis_outputs.py" = ["E501"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
fungtion = [
  "assets/images/*",
  "assets/web_static/css/*",
  "assets/web_static/fonts/*",
  "assets/web_static/images/*",
  "assets/web_static/js/*",
  "assets/web_static/js/google-analytics/*",
  "assets/web_static/js/phylogram_d3/*",
  "assets/web_static/js/phylogram_d3/lib/*",
  "assets/web_static/js/vendor/*",
  "assets/web_static/xmlfile/*",
  "model/*.rds",
  "predict_core.R",
  "reference_data/*",
  "reference_data/FungalEffector_positive_similarity_matrix/*",
]
